--- a/WarcraftDotNet/WarcraftDotNet.csproj
+++ b/WarcraftDotNet/WarcraftDotNet.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="WarcraftDotNet.nuspec" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Flurl" Version="2.3.0" />
     <PackageReference Include="Flurl.Http" Version="1.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1-beta1" />
