--- a/WarcraftDotNet/WarcraftDotNet.csproj
+++ b/WarcraftDotNet/WarcraftDotNet.csproj
@@ -15,7 +15,8 @@
   <ItemGroup>
     <PackageReference Include="Flurl" Version="2.3.0" />
     <PackageReference Include="Flurl.Http" Version="1.1.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.1-beta1" />
+    <PackageReference Include="GitVersionTask" Version="4.0.0-beta0011" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
