--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
-# # Run Tests
-# - script: dotnet test
-#   displayName: 'dotnet test'
+# Run Tests
+- script: dotnet test
+  displayName: 'dotnet test'
