--- a/src/WarcraftDotNet.csproj
+++ b/src/WarcraftDotNet.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="RestSharp" Version="106.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
